# scraplus

./: .env.example  .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  vitest.config.ts  vitest.integration.config.ts
.github/workflows/: ci.yml
modal_app/: app.py  auth_lib.py  cache_lib.py  crawl_lib.py  extract_html.py  extract_selectors.py  llm_extract.py  map_lib.py  monitor_lib.py  playwright_scrape.py  requirements-light.txt  schedule_lib.py  scrape_core.py  ssrf.py  test_auth_lib.py  test_cache_lib.py  test_crawl_lib.py  test_extract_html.py  test_extract_selectors.py  test_llm_extract.py  test_map_lib.py  test_monitor_lib.py  test_schedule_lib.py  test_scrape_core.py  test_ssrf.py  test_webhook_util.py  webhook_util.py
sdks/node/: package.json  tsconfig.json
sdks/node/src/: index.ts
sdks/python/: pyproject.toml
sdks/python/scraplus/: __init__.py  client.py
sdks/python/tests/: test_client.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/(dashboard)/: coming-soon.tsx  layout.tsx
src/components/scraplus/: batch-manager.tsx  command-menu.tsx  console-panel.tsx  crawl-manager.tsx  dashboard-shell.test.tsx  dashboard-shell.tsx  extract-playground.tsx  format-chips.tsx  json-tree.tsx  map-explorer.tsx  monitor-manager.tsx  response-viewer.tsx  schedule-manager.tsx  scrape-playground.tsx  segmented-control.tsx  theme-provider.tsx  toast.tsx  usage-mock.tsx  usage-stats.tsx
src/lib/: dashboard-nav.ts
src/lib/scrape/: ssrf.test.ts  ssrf.ts
tests/: api.integration.test.ts  integration-env.ts  integration.setup.ts
(+38 files in other folders)
